--- a/style.css
+++ b/style.css
@@ -43,16 +43,53 @@ body {
 .item{
     flex:1145%;
 }
-
-@media (min-width: 600px) {
-    .item{
-        flex: 1145%;
+ /* Media Queries */
+@media (min-width: 960px) {
+    .subject,
+    .lring {
+      display: flex;
     }
-    body {
-        background-color: #EDCB96;
-    }
-    .Name {
+  
+  
+    /* Historical Query */
+    .history {
+      display: flex;
+      width: 100%;
+      gap: 20px;
+  }
+  
+  .historyig{
+    width: 200px;
+    align-self: self-start;
+    padding-top: 2em;
+  }
+  
+    .column {
+      display: flex;
+      gap: 10px;
+      margin-inline-start: auto;
+    }}
+    @media (max-width: 960px){
+        body{
+          width: 90%;
+        }
+        /* History class */
+      .history {
+        display: block;
+        width: 90%;
+      }
+      
+      .column {
         display: flex;
-    }
-}
-
+        gap: 20px;
+      }
+      
+      .historyig{
+        width: 200px;
+        align-self: self-start;
+        padding-top: 2em;
+      }
+      .mid{
+        order: 1;
+      }
+      }
